2005-10-24  Maciej Stachowiak  <mjs@apple.com>

        Re-landing Dave Hyatt's changes from when the tree was closed.

        * khtml/rendering/render_container.cpp:
        (RenderContainer::destroy):
        (RenderContainer::destroyLeftoverAnonymousChildren):
        * khtml/rendering/render_container.h:
        * khtml/rendering/render_flow.cpp:
        (RenderFlow::destroy):
        * khtml/rendering/render_layer.cpp:
        (khtml::RenderLayer::isTransparent):
        (khtml::RenderLayer::paintLayer):
        (khtml::isOverflowOnly):
        (khtml::compare):
        (khtml::sortByZOrder):
        * khtml/rendering/render_layer.h:

2005-10-24  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin Adler.
        Commited by Tim Hatcher.

        - fixes http://bugzilla.opendarwin.org/show_bug.cgi?id=5484
        REGRESSION: reproducible crash in CachedCSSStyleSheet::setCharset

        * khtml/misc/loader.cpp:
        (CachedCSSStyleSheet::setCharset):
        (CachedScript::setCharset):

2005-10-24  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by Darin.  Committed by David Harrison.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=5449
        "OBJECT should be accessible by id/name as document property only if its only children are PARAMs"

        Test added:
        * fast/js/object-by-name-or-id-expected.txt: Added.
        * fast/js/object-by-name-or-id.html: Added.

        Files changed:
        * khtml/html/html_miscimpl.cpp:
        (DOM::HTMLNameCollectionImpl::traverseNextItem):
        * khtml/html/html_objectimpl.cpp:
        (DOM::HTMLObjectElementImpl::HTMLObjectElementImpl):
        (DOM::HTMLObjectElementImpl::parseMappedAttribute):
        (DOM::HTMLObjectElementImpl::insertedIntoDocument):
        (DOM::HTMLObjectElementImpl::removedFromDocument):
        (DOM::HTMLObjectElementImpl::childrenChanged):
        (DOM::HTMLObjectElementImpl::updateDocNamedItem):
        * khtml/html/html_objectimpl.h: