@@ -1,0 +1,15 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x584
+      RenderButton {INPUT} at (2,2) size 54x18
+        RenderBlock (anonymous) at (8,2) size 38x13
+          RenderText at (0,0) size 38x13
+            text run at (0,0) width 38: "Submit"
+      RenderBR {BR} at (0,0) size 0x0
+      RenderButton {INPUT} at (2,24) size 45x18
+        RenderBlock (anonymous) at (8,2) size 29x13
+          RenderText at (0,0) size 29x13
+            text run at (0,0) width 29: "Reset"
+      RenderBR {BR} at (0,0) size 0x0
